# file-organizer-desktop

./: .gitignore  LAYOUT_FIXES.md  LICENSE  README.md  UI_ENHANCEMENTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-llm-servers.yml  build.yml
doc/: HELP_SYSTEM.md
docs/: embedded-llm-architecture.md
llm-server/: .gitignore  BUILD.md  hook-mlx.py  ollama_server.py  run_server.sh
llm-server/linux/llama/: llama_server.py  llama_server.spec  version.py
llm-server/linux/ollama/: llama_server.py  ollama_server.py  ollama_server.spec  requirements.txt  version.py
llm-server/macos/mlx/: hook-transformers.py  mlx_server.py  mlx_server.spec  requirements.txt  run-diag.sh  run_server.sh  version.py
llm-server/windows/llama/: llama_server.py  llama_server.spec  requirements.txt  test-visual-llama-cpp.py
llm-server/windows/ollama/: hook-llama_cpp.py  install_llama_vulkan.ps1  llama_server.py  ollama_server.py  ollama_server.spec  test.py  version.py
scripts/: bump-version.cjs  sync-version.cjs  validate-version.cjs
src/: App.tsx  api.ts  debug-logger.ts  main.tsx  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: embedded_llm.rs  embedded_llm_service.rs  main.rs  process_manager.rs
src-tauri/tests/: folder_picker.rs
src/components/: AboutDialog.tsx  ErrorBoundary.tsx  FileAnalysisPanel.tsx  HelpDialog.tsx  LLMConfigPanel.tsx  ManagedLLMDialog.tsx  UpdateCheckDialog.tsx  index.ts
src/types/: index.ts
tests/: curl-chat-example.sh  custom-llm-standalone.test.ts  custom-llm-with-headers.test.ts  download-test-model.sh  lmstudio-connection.test.ts  ollama-response.test.ts  optimizedCategoriesOutput.data  process-optimization-response.test.ts  test_classify.py  test_classify.sh
tests/doc-samples/: Document 1.docx  FS_general.xlsx
