[package]
name = "file-organizer-desktop"
version = "1.0.0"
description = "A file organizer application built with React and Tauri"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "1.8", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-extract = "0.6.5"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
dirs = "5.0"
docx-rs = "0.4"
calamine = "0.26"
image = "0.25"
base64 = "0.22"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.15.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Development profile optimizations for faster compilation
[profile.dev]
opt-level = 1              # Enable basic optimizations for faster runtime
incremental = true         # Enable incremental compilation (default, but explicit)
codegen-units = 256        # Maximize parallelism during compilation

[profile.dev.package."*"]
opt-level = 3              # Optimize dependencies fully (they don't change often)
